# cross_species_contamination

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  remote-integration.yml
csc/: __init__.py  config.py  default_config.yaml
csc/aggregate/: __init__.py  aggregate.py  cli.py  confidence.py  taxonomy.py
csc/classify/: __init__.py  classify.py  cli.py  db.py  db_cli.py
csc/detect/: __init__.py  cli.py  detect.py  report.py
csc/extract/: __init__.py  cli.py  extract.py
csc/report/: __init__.py  cli.py  cohort.py  cohort_report.py  interactive.py  report.py  svg.py
csc/utils/: __init__.py
docs/: README.md  aggregate.md  classify.md  configuration.md  detect.md  extract.md  index.html  per_sample_summary.tsv  pipeline.md  report.md  report_manifest.json  testing.md
extract_unmapped/: __init__.py  cli.py  extract.py
nextflow/: classify.nf  extract_unmapped.nf  main.nf  nextflow.config
nextflow/modules/: aggregate.nf  classify.nf  detect.nf  extract.nf  summary.nf
tests/: conftest.py  generate_golden.py  generate_report_test_data.py  generate_test_data.py  test_1000g_scripts.py  test_aggregate.py  test_classify.py  test_confidence.py  test_config.py  test_db.py  test_detect.py  test_end_to_end.py  test_extract.py  test_golden.py  test_nextflow_pipeline.py  test_report.py  test_report_cohort.py  test_report_confidence_tiers.py  test_taxonomy.py
tests/1000G/: README.md  aggregate_detect.sh  classify_array.sh  extract_unmapped_array.sh  generate_report.sh  manifest.tsv  submit_agg_report.sh  submit_classify.sh  submit_extract.sh
tests/golden/: README.md  aggregate_matrix.tsv  aggregate_metadata.json  detect_flagged_samples.tsv  detect_qc_summary.json  detect_quarantine_list.txt
