[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "csc"
version = "0.2.0"
description = "Cross-species contamination detection pipeline for WGS BAM/CRAM files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "jlanej" }]
dependencies = ["pyyaml>=6"]

[project.scripts]
csc-extract = "csc.extract.cli:main"
csc-classify = "csc.classify.cli:main"
csc-db = "csc.classify.db_cli:main"
csc-aggregate = "csc.aggregate.cli:main"
csc-detect = "csc.detect.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["csc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
